package ca.mcmaster.se2aa4.mazerunner;

public interface MazeExplorer {
    String exploreMaze(Maze maze);

}